--- a/config/database.yml
+++ b/config/database.yml
@@ -10,4 +10,4 @@ production:
   encoding: unicode
   database: alotto
   pool: 5
-  host: <%= ENV['HEROKU_POSTGRESQL_YELLOW_URL'] %>
+  url: <%= ENV['HEROKU_POSTGRESQL_YELLOW_URL'] %>
